# vit-servicing-station

vit-servicing-station-cli/: Cargo.toml
vit-servicing-station-lib/: Cargo.toml
vit-servicing-station-server/: Cargo.toml
vit-servicing-station-tests/: Cargo.toml
vit-servicing-station-tests/src/common/data/: generator.rs
