[package]
name = "vit-servicing-station-server"
version = "0.1.0-ci-test.1"
authors = ["danielsanchezq <daniel.sanchez@iohk.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
logging-lib = { path = "../logging-lib" }
structopt = "0.3.14"
tokio = { version = "0.2.21", features = ["macros"] }
vit-servicing-station-lib = { path = "../vit-servicing-station-lib" }
